Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32122

Working directory for remote linux debugging not set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 15.0.1
    • Qt Creator 15.0.0
    • Debugger
    • None
    • Ubuntu 24.04
    • Linux/X11
    • 22ecc28ce (15.0)

      With version 15.0.0 it seems like the working directory is not applied when starting a remote debugging session. I couldn't find the change that caused that issue from the git history, but adding

      d->debuggerServerProc.setWorkingDirectory(m_runParameters.inferior.workingDirectory);

      to DebuggerRunTool::startDebugServerIfNeededAndContinueStartup fixed it for me.

       

       

        For Gerrit Dashboard: QTCREATORBUG-32122
        # Subject Branch Project Status CR V

            hjk hjk
            volki21 Volker Vogelhuber
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes