Debugger: Set working directory for gdbserver

Fixes: QTCREATORBUG-32122
Change-Id: I63fc8dcd481b33bc5209c034af6c6547c56a9458
Reviewed-by: Volker Vogelhuber <wiendl@web.de>
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
Reviewed-by: hjk <hjk@qt.io>